Revise project hub content in index.html
Updated project descriptions and links in the project hub.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>James Minnehan — Projects</title>
+  <style>
+    :root{--bg:#0b0f14;--card:#0f141a;--text:#e6e8ea;--muted:#9aa4ae;--acc:#10b981;}
+    *{box-sizing:border-box} body{margin:0;background:linear-gradient(180deg,#0b0f14,#0a0e13);color:var(--text);font:16px/1.6 Inter,system-ui,Segoe UI,Roboto,Arial}
+    .wrap{max-width:1050px;margin:0 auto;padding:56px 20px}
+    h1{margin:0 0 6px;font-size:36px} p{margin:6px 0;color:var(--muted)}
+    .grid{display:grid;gap:18px;margin-top:24px}
+    @media(min-width:780px){.grid{grid-template-columns:repeat(3,1fr)}}
+    .card{display:block;background:var(--card);border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:18px;text-decoration:none;color:var(--text);
+          transition:.2s;box-shadow:0 10px 32px rgba(0,0,0,.30)}
+    .card:hover{border-color:var(--acc);transform:translateY(-2px);box-shadow:0 14px 40px rgba(16,185,129,.25)}
+    .title{font-weight:700;margin:0 0 6px} .badge{font-size:12px;color:#a7f3d0}
+    .footer{margin-top:28px;color:var(--muted);font-size:14px}
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <h1>James Minnehan — Project Hub</h1>
+    <p>All my finance tools and dashboards in one place.</p>
+
+    <div class="grid">
+      <a class="card" href="https://deal-screener.streamlit.app" target="_blank">
+        <p class="title">Apex Deal Screener</p>
+        <p class="badge">Streamlit · valuation / P-E / benchmarks</p>
+        <p>Interactive screening + charts with quick LBO/valuation toy.</p>
+      </a>
+
+      <a class="card" href="https://minnehanjames-hub.github.io/valuation-site/" target="_blank">
+        <p class="title">Valuation Site</p>
+        <p class="badge">GitHub Pages</p>
+        <p>Static notes / demos for comps and DCF assumptions.</p>
+      </a>
+
+      <a class="card" href="https://github.com/minnehanjames-hub" target="_blank">
+        <p class="title">All Repos</p>
+        <p class="badge">GitHub</p>
+        <p>Browse source code, commits, and releases.</p>
+      </a>
+    </div>
+
+    <p class="footer">Want something added? Open an issue on the repo or email me.</p>
+  </div>
+</body>
+</html>
 
