Duplicate Apex Deal Screener card in index.html
Added a duplicate card link for the Apex Deal Screener.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
     <p>All my finance tools and dashboards in one place.</p>
 
     <div class="grid">
+      <div class="grid">
+  <a class="card" href="https://deal-screener.streamlit.app" target="_blank">
+    <p class="title">Apex Deal Screener</p>
+    <p class="badge">Streamlit · valuation / P-E / benchmarks</p>
+    <p>Interactive screening + charts with quick LBO/valuation toy.</p>
+  </a>
       <a class="card" href="https://deal-screener.streamlit.app" target="_blank">
         <p class="title">Apex Deal Screener</p>
         <p class="badge">Streamlit · valuation / P-E / benchmarks</p>
