--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>James Minnehan — Project Hub</h1>
+    <h1>James Minnehan — Projects</h1>
     <p>All my finance tools and dashboards in one place.</p>
 
     <div class="grid">
-      <a class="card" href="https://nxmgsv7mfpcjcsupxuwskb.streamlit.app/" target="_blank">
-  <p class="title">Apex Deal Screener</p>
-  <p class="badge">Streamlit · valuation / P–E / benchmarks</p>
-  <p>Interactive screening + charts with quick LBO/valuation toy.</p>
+     <a class="card" href="https://nxmgsv7mfpcjcsupxuwskb.streamlit.app" target="_blank">
+    <p class="title">Deal Screener</p>
+    <p class="badge">Streamlit · valuation / P–E / benchmarks</p>
+    <p>Interactive screening + charts with quick LBO/valuation toy.</p>
 </a>
+      
       <a class="card" href="https://minnehanjames-hub.github.io/valuation-site/" target="_blank">
         <p class="title">Valuation Site</p>
         <p class="badge">GitHub Pages</p>
@@ -66,7 +67,7 @@
       </a>
     </div>
 
-    <p class="footer">Want something added? Open an issue on the repo or email me.</p>
+    <p class="footer">Is there an issue? Email me at minnehanjames@gmail.com.</p>
   </div>
 </body>
 </html>
