Update title and add LinkedIn link in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>James Minnehan — Projects</title>
+  <title>James Minnehan — Projects </title>
   <style>
     :root {
       --bg:#0b0f14;--card:#0f141a;--text:#e6e8ea;--muted:#9aa4ae;--acc:#10b981;
@@ -45,7 +45,8 @@
 <body>
   <div class="wrap">
     <h1>James Minnehan — Projects</h1>
-    <p>All my finance tools and dashboards in one place.</p>
+    <p> https://www.linkedin.com/in/james-thomas-minnehan-975b7533b/
+      All my finance tools and dashboards in one place.</p>
 
     <div class="grid">
      <a class="card" href="https://nxmgsv7mfpcjcsupxuwskb.streamlit.app" target="_blank">
@@ -67,7 +68,7 @@
       </a>
     </div>
 
-    <p class="footer">Is there an issue? Email me at minnehanjames@gmail.com.</p>
+    <p class="footer">Is there an issue? Email me at minnehanjames@gmail.com. Or Message me on linkedin https://www.linkedin.com/in/james-thomas-minnehan-975b7533b/</p>
   </div>
 </body>
 </html>
