Update project descriptions in index.html
Removed LinkedIn URL and added Game Theory Playground section.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
 <body>
   <div class="wrap">
     <h1>James Minnehan — Projects</h1>
-    <p> https://www.linkedin.com/in/james-thomas-minnehan-975b7533b/
-      All my finance tools and dashboards in one place.</p>
+    <p> All my finance tools and dashboards in one place.</p>
 
     <div class="grid">
      <a class="card" href="https://nxmgsv7mfpcjcsupxuwskb.streamlit.app" target="_blank">
@@ -60,6 +59,14 @@
         <p class="badge">GitHub Pages</p>
         <p>Static notes / demos for comps and DCF assumptions.</p>
       </a>
+        <a class="card" href="https://minnehanjames-hub.github.io/game-theory-playground/" target="_blank">
+    <p class="title">Game Theory Playground</p>
+    <p class="badge">GitHub Pages · HTML / JS</p>
+    <p>
+      Simple interactive site that lets you change a 2×2 payoff table and see
+      the best choices for each player and whether there is a Nash equilibrium.
+    </p>
+  </a>
 
       <a class="card" href="https://github.com/minnehanjames-hub" target="_blank">
         <p class="title">All Repos</p>
