Add project card for Monte Carlo Portfolio Optimizer
Added a project card for the Monte Carlo Portfolio Optimizer with a description and link.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
         <p>Browse source code, commits, and releases.</p>
       </a>
     </div>
+    
+    <div class="project-card">
+  <h3>Monte Carlo Portfolio Optimizer</h3>
+  <p>An interactive simulation-based optimizer that analyzes your holdings, runs Monte Carlo forecasts, and calculates Sharpe Ratio, Alpha, Tracking Error, Sortino, and more.</p>
+  <a href="https://https://portfolio-optimizor-idajzwbemavgarjyomw9j2.streamlit.app/" target="_blank">View Project →</a>
+</div>
+
 
     <p class="footer">Is there an issue? Email me at minnehanjames@gmail.com. Or Message me on linkedin https://www.linkedin.com/in/james-thomas-minnehan-975b7533b/</p>
   </div>
