Fix duplicate URL in project card link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="project-card">
   <h3>Monte Carlo Portfolio Optimizer</h3>
   <p>An interactive simulation-based optimizer that analyzes your holdings, runs Monte Carlo forecasts, and calculates Sharpe Ratio, Alpha, Tracking Error, Sortino, and more.</p>
-  <a href="https://https://portfolio-optimizor-idajzwbemavgarjyomw9j2.streamlit.app/" target="_blank">View Project →</a>
+  <a href="https://portfolio-optimizor-idajzwbemavgarjyomw9j2.streamlit.app/" target="_blank">View Project →</a>
 </div>
 
 
