Revise Monte Carlo Portfolio Optimizer card in index.html
Updated project card for Monte Carlo Portfolio Optimizer with new link and additional details.

--- a/index.html
+++ b/index.html
@@ -67,19 +67,26 @@
       the best choices for each player and whether there is a Nash equilibrium.
     </p>
   </a>
-
       <a class="card" href="https://github.com/minnehanjames-hub" target="_blank">
         <p class="title">All Repos</p>
         <p class="badge">GitHub</p>
         <p>Browse source code, commits, and releases.</p>
       </a>
-    </div>
-    
-    <div class="project-card">
-  <h3>Monte Carlo Portfolio Optimizer</h3>
-  <p>An interactive simulation-based optimizer that analyzes your holdings, runs Monte Carlo forecasts, and calculates Sharpe Ratio, Alpha, Tracking Error, Sortino, and more.</p>
-  <a href="https://portfolio-optimizor-idajzwbemavgarjyomw9j2.streamlit.app/" target="_blank">View Project →</a>
+ <a class="card" href="https://portfolio-optimizor-idajzwbemavgaryjomw9j2.streamlit.app/" target="_blank">
+  <p class="title">Monte Carlo Portfolio Optimizer</p>
+  <p class="badge">Streamlit App · Python / Quant</p>
+  <p>
+    Interactive simulation-based optimizer that analyzes your holdings,
+    runs Monte Carlo forecasts, and calculates Sharpe Ratio, Alpha,
+    Tracking Error, Information Ratio, Sortino, and more.
+  </p>
+</a>
+  <p>
+    Interactive simulation-based optimizer that analyzes your holdings, runs Monte Carlo forecasts,
+    and calculates Sharpe Ratio, Alpha, Tracking Error, Information Ratio, Sortino, and more.
+  </p>
 </div>
+
 
 
     <p class="footer">Is there an issue? Email me at minnehanjames@gmail.com. Or Message me on linkedin https://www.linkedin.com/in/james-thomas-minnehan-975b7533b/</p>
