--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <p> All my finance tools and dashboards in one place.</p>
 
     <div class="grid">
-     <a class="card" href="https://nxmgsv7mfpcjcsupxuwskb.streamlit.app" target="_blank">
+     <a class="card" href="https://portfolio-optimizor-idajzwbemavgarjyomw9j2.streamlit.app/" target="_blank">
     <p class="title">Deal Screener</p>
     <p class="badge">Streamlit · valuation / P–E / benchmarks</p>
     <p>Interactive screening + charts with quick LBO/valuation toy.</p>
