Add Monte Carlo Portfolio Optimizer card to index.html
Added a new card for the Monte Carlo Portfolio Optimizer with a description of its features.

--- a/index.html
+++ b/index.html
@@ -60,15 +60,20 @@
       the best choices for each player and whether there is a Nash equilibrium.
     </p>
   </a>
+    <a class="card" href="https://minnehanjames-hub.github.io/portfolio-optimizer/" target="_blank">
+  <p class="title">Monte Carlo Portfolio Optimizer</p>
+  <p class="badge">HTML · JavaScript · Quant</p>
+  <p>
+    Interactive browser-based optimizer using Monte Carlo simulations, diversification scoring,
+    and risk metrics like Sharpe, Alpha, Tracking Error, Information Ratio, and Sortino.
+  </p>
+</a>
       <a class="card" href="https://github.com/minnehanjames-hub" target="_blank">
         <p class="title">All Repos</p>
         <p class="badge">GitHub</p>
         <p>Browse source code, commits, and releases.</p>
       </a>
-  <p>
-    Interactive simulation-based optimizer that analyzes your holdings, runs Monte Carlo forecasts,
-    and calculates Sharpe Ratio, Alpha, Tracking Error, Information Ratio, Sortino, and more.
-  </p>
+
 </div>
 
 
