Add Apex Deal Screener card to index.html
Added a new card for the Apex Deal Screener tool with a description and link.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
     Interactive browser-based optimizer using Monte Carlo simulations, diversification scoring,
     and risk metrics like Sharpe, Alpha, Tracking Error, Information Ratio, and Sortino.
   </p>
+      <a class="card" href="/deal-screener.html" target="_blank">
+  <p class="title">Apex Deal Screener</p>
+  <p class="badge">HTML • Valuation • P/E</p>
+  <p>
+    Lightweight valuation tool using earnings, sector multiples,
+    and upside calculations — all in static HTML/JS.
+  </p>
 </a>
       <a class="card" href="https://github.com/minnehanjames-hub" target="_blank">
         <p class="title">All Repos</p>
