Update link for Apex Deal Screener

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     Interactive browser-based optimizer using Monte Carlo simulations, diversification scoring,
     and risk metrics like Sharpe, Alpha, Tracking Error, Information Ratio, and Sortino.
   </p>
-      <a class="card" href="https://minnehanjames-hub.github.io/deal-screener/" target="_blank">
+      <a class="card" href="deal-screener.html" target="_blank">
   <p class="title">Apex Deal Screener</p>
   <p class="badge">HTML • Valuation • P/E</p>
   <p>
